# gSTC-ISP

./: Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.status  configure  configure.in
autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/: .main.c.swp  .main.h.swp  .protocol.c.swp  .protocol.h.swp  .uart.c.swp  .uart.h.swp  Makefile  Makefile.am  Makefile.in  main.c  main.h  protocol.c  protocol.h  uart.c  uart.h
src/.deps/: gSTCISP-main.Po  gSTCISP-protocol.Po  gSTCISP-uart.Po
